--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* DEVELOPER: Omar Eraky, IS117-004, Spring 2023*/
 @font-face {
     font-family: Destiny;  src: url('Fonts/SF Sports Night NS Upright.ttf');
 }
